# PAT

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  docker-publish.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/ai/: base.py  registry.py
backend/app/ai/agents/: ats_keyword.py  base_agent.py  certificate_parser.py  cover_letter.py  interview_questions.py  job_analyzer.py  match_scorer.py  resume_optimizer.py  resume_parser.py  skill_gap.py  tex_keyword_injector.py
backend/app/ai/providers/: anthropic_provider.py  ollama_provider.py  openai_provider.py
backend/app/ai/schemas/: certificate_schemas.py  document_schemas.py  job_schemas.py  latex_templates.py  match_schemas.py  resume_schemas.py
backend/app/api/v1/: applications.py  auth.py  certificates.py  exports.py  health.py  jobs.py  resumes.py  router.py  uploads.py  users.py
backend/app/core/: exceptions.py  logging.py  security.py
backend/app/document_processing/: base.py  dispatcher.py  docx_processor.py  latex_renderer.py  moderncv_builder.py  ocr_processor.py  pdf_processor.py  txt_processor.py
backend/app/integrations/telegram/: bot.py  handlers.py  notify.py  url_extractor.py
backend/app/matching/: embedding_service.py  keyword_matcher.py  match_engine.py
backend/app/models/: ai_config.py  application.py  base.py  job.py  resume.py  user.py  work_certificate.py
backend/app/repositories/: application_repository.py  base.py  job_repository.py  resume_repository.py  user_repository.py  work_certificate_repository.py
backend/app/schemas/: application.py  auth.py  job.py  resume.py  user.py  work_certificate.py
backend/app/services/: application_service.py  auth_service.py  job_service.py  resume_service.py  user_service.py
backend/app/tasks/: analyze_job.py  analyze_resume.py  celery_app.py  generate_application.py
backend/migrations/: env.py
backend/migrations/versions/: 001_create_users.py  002_create_resumes.py  003_create_jobs.py  004_create_applications.py  005_create_ai_configs.py  006_extend_jobs_table.py  007_create_work_certificates.py  008_add_deleted_at_to_applications.py  009_add_profile_text_to_users.py
backend/tests/: conftest.py
backend/tests/integration/api/: test_auth.py  test_jobs.py
backend/tests/unit/: test_auth_service.py  test_config.py  test_security.py  test_user_repository.py
backend/tests/unit/ai/: test_match_scorer_agent.py  test_openai_provider.py  test_resume_parser_agent.py
backend/tests/unit/document_processing/: test_dispatcher.py  test_latex_renderer.py  test_pdf_processor.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
(+37 files in other folders)
